# pantheon-agent-template

./: .bumpversion.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  entrypoint.py  pyproject.toml  start_agent.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: agents.example-agent.yml  release.python-agent.yml  tests-example-agent.yml
docs/: CONTRIBUTING.md
example-agent/: .bumpversion.toml  README.md  pyproject.toml
example-agent/src/example_agent/: ray_entrypoint.py
src/example_agent/: ray_entrypoint.py
src/example_agent/workflows/: example.yaml
